fixed hover issue on most buttons added styling for some elements fixed text overflow

--- a/src/css/hud/HUDButton.css
+++ b/src/css/hud/HUDButton.css
@@ -6,18 +6,14 @@
     border-radius: 0.2vw;
     font-size: 1.35vw;
     margin-top: 0.5vw;
-    border-left: inset 10px;
-    border-bottom: solid 10px;
     border-right: none;
     border-top: none;
     height: 6vw;
-    border-color: darkred;
-    background-color: #d95763;
 }
 
 .hud-button-enter {
-    width: 15%;
-    height: 3vw;
+    width: 15vw;
+    height: 4vw;
     margin: 0.8vw;
     padding: 0;
     border-radius: 10px;
@@ -33,21 +29,24 @@
     font-size: 3vw;
     bottom: 4vw;
     left: 10vw;
+    border-radius: 10px;
 }
 
 .hud-button-enter:hover {
 
 }
 
+.button-wrapper {
+    width: 100%;
+}
+
 /* Generic button style */
 .hud-button {
     cursor: pointer;
     transition: all 0.4s;
-}
-
-.hud-button-small:hover {
-    border-bottom: solid 4px;
-    border-left: solid 4px;
-    margin-top: 1.5vw;
-    height: 5vw;
+    outline: none;
+    border-color: darkred;
+    background-color: #d95763;
+    border-left: 10px inset red;
+    border-bottom: 10px solid;
 }
