--- a/src/css/hud/HUDSongSearch.css
+++ b/src/css/hud/HUDSongSearch.css
@@ -19,20 +19,29 @@
 }
 
 input {
-    width: 70%;
-    height: 3vw;
+    width: 110vw;
+    height: 4vw;
+    background-color: rgba(255, 255, 255, 0.3);
     margin: 0.8vw;
     border-radius: 10px;
-    border: solid 2px darkgray;
+    border: solid transparent;
+    border-width: 4px 0 4px 0;
     outline: none;
-    transition: 0.2s all;
+    transition: 0.8s all;
     padding: 0 0 0 1vw;
+    color: black;
+    font-size: 12pt;
+    text-align: center;
+}
+
+input::placeholder {
+    color: rgba(0, 0, 0, 0.3);
 }
 
 input:focus {
-    border: solid 2px black;
+    border-color: darkred;
 }
 
 input:hover {
-    border: solid 2px black;
+    border-color: rgba(139, 0, 0, 0.4);
 }
